--- a/index.html
+++ b/index.html
@@ -2,9 +2,37 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio</title>
+
+    <link
+      rel="preload"
+      as="image"
+      href="/images/compressed-images/profilepicture.webp"
+      type="image/webp"
+    />
+    <link
+      rel="preload"
+      as="image"
+      href="/images/compressed-images/smart-estate-main.webp"
+      type="image/webp"
+    />
+
+    <meta
+      name="title"
+      content="Muhammad Ali Mehmood - Full Stack Developer & Software Engineer"
+    />
+    <meta
+      name="description"
+      content="Experienced Full Stack Developer specializing in React, Node.js, and modern web technologies. Building scalable web applications with clean code and innovative solutions."
+    />
+    <meta
+      name="keywords"
+      content="Muhammad Ali Mehmood, Full Stack Developer, Software Engineer, Web Developer, React Developer, Node.js, JavaScript, Portfolio, Frontend Developer, Backend Developer"
+    />
+    <meta name="author" content="Muhammad Ali Mehmood" />
+    <meta name="robots" content="index, follow" />
+    <title>Muhammad Ali Mehmood</title>
   </head>
   <body>
     <div id="root"></div>
