Optimized background image loading

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       href="/images/compressed-images/smart-estate-main.webp"
       type="image/webp"
     />
+    <link rel="preload" as="image" href="/bg-image.jpg" type="image/jpeg" />
 
     <meta
       name="title"
